--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,18 +7,10 @@ variables:
   IMAGE_NAME: ssv-dkg
   DOCKER_BUILDKIT: 1
 
-  #STAGE
-  ACCOUNT_ID_INFRA_STAGE: 121827225315
-  AWS_REGION_INFRA_STAGE: "us-west-2"
-  DOCKER_REPO_INFRA_STAGE: $ACCOUNT_ID_INFRA_STAGE.dkr.ecr.$AWS_REGION_INFRA_STAGE.amazonaws.com/$IMAGE_NAME
-  APP_REPLICAS_INFRA_STAGE: "1"
-  ECRLOGIN_INFRA_STAGE: "aws ecr get-login --registry-ids $ACCOUNT_ID_INFRA_STAGE --region $AWS_REGION_INFRA_STAGE --no-include-email"
-  STAGE_HEALTH_CHECK_IMAGE: 121827225315.dkr.ecr.us-west-2.amazonaws.com/infra-stage-repo:ubuntu20
-
   #PRODUCTION
   ACCOUNT_ID_INFRA_PROD: 764289642555
   AWS_REGION_INFRA_PROD: "us-west-2"
-  DOCKER_REPO_INFRA_PROD: $ACCOUNT_ID_INFRA_PROD.dkr.ecr.$AWS_REGION_INFRA_STAGE.amazonaws.com/$IMAGE_NAME
+  DOCKER_REPO_INFRA_PROD: $ACCOUNT_ID_INFRA_PROD.dkr.ecr.$AWS_REGION_INFRA_PROD.amazonaws.com/$IMAGE_NAME
   APP_REPLICAS_INFRA_PROD: "1"
   ECRLOGIN_INFRA_PROD: "aws ecr get-login --registry-ids $ACCOUNT_ID_INFRA_PROD --region $AWS_REGION_INFRA_PROD --no-include-email"
   PROD_HEALTH_CHECK_IMAGE: 764289642555.dkr.ecr.us-west-2.amazonaws.com/infra-prod-repo:ubuntu20
@@ -49,13 +41,18 @@ Deploy nodes to prod:
   tags:
     - blox-infra-prod
   script:
-    - apk add bash
+    - apk add bash curl
     - export K8S_API_VERSION=$INFRA_PROD_K8_API_VERSION
     - export SSV_DKG_CPU_LIMIT=$PROD_SSV_DKG_CPU_LIMIT
     - export SSV_DKG_MEM_LIMIT=$PROD_SSV_DKG_MEM_LIMIT
     - curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.18.0/bin/linux/amd64/kubectl
     - chmod +x ./kubectl
     - mv ./kubectl /usr/bin/kubectl
+    - mkdir ~/.kube/
+    - echo $PROD_KUBECONFIG | base64 -d > kubeconfig
+    - mv kubeconfig ~/.kube/
+    - export KUBECONFIG=~/.kube/kubeconfig
+    - kubectl config get-contexts
     # +-------------------------------+
     # |      Deploy ssv-dkg nodes     |
     # +-------------------------------+
